--- a/references.bib
+++ b/references.bib
@@ -65,3 +65,17 @@ https://ins-basel.github.io/fidelitysim/},
   }
 
 
+@article{HUSSEY2007182,
+title = {Design and analysis of stepped wedge cluster randomized trials},
+journal = {Contemporary Clinical Trials},
+volume = {28},
+number = {2},
+pages = {182-191},
+year = {2007},
+issn = {1551-7144},
+doi = {https://doi.org/10.1016/j.cct.2006.05.007},
+url = {https://www.sciencedirect.com/science/article/pii/S1551714406000632},
+author = {Michael A. Hussey and James P. Hughes},
+keywords = {Cluster randomized trial, Stepped wedge design, Prevention trials},
+abstract = {Cluster randomized trials (CRT) are often used to evaluate therapies or interventions in situations where individual randomization is not possible or not desirable for logistic, financial or ethical reasons. While a significant and rapidly growing body of literature exists on CRTs utilizing a “parallel” design (i.e. I clusters randomized to each treatment), only a few examples of CRTs using crossover designs have been described. In this article we discuss the design and analysis of a particular type of crossover CRT – the stepped wedge – and provide an example of its use.}
+}
