--- a/simulation-step-by-step.qmd
+++ b/simulation-step-by-step.qmd
@@ -7,35 +7,34 @@ The following chapter is separated in two parts:
       - Studies with different fidelity patterns
 2. Simulation experiments to comparison of several fidelity patterns
 
-Figure @fig-workflow provides an overview of the simulation workflow.
+@fig-workflow provides an overview of the simulation workflow.
 
-```{r, out.width='50%', echo = F}
+```{r, out.width='80%', echo = F}
 #| fig-cap: "Overview of simulation workflow"
 #| label: fig-workflow 
 knitr::include_graphics("img/workflow_2.png")
 ```
 
-## Simulation experiment for one setting
+## Simulation experiment for one setting {#sec-simintro}
 
-According to the inner frame of Figure @fig-workflow, several design choices have to be made to evaluate the performance of a cluster randomized trial (Design choice) and with possible implementation error (fidelity pattern). 
+According to the inner frame of @fig-workflow, several specifications have to be made to evaluate the performance of a cluster randomized trial (design choice) with possible implementation error (fidelity pattern). 
 
-Within each simulation experiment steps of data sampling and effect estimation will be repeated. 
-For explanation see @sec-statsdetails. To simplify the process of the whole simulation experiment the R-function `simulation()` is provided within the R-package {fidelitysim}. The function includes the steps: data sampling for a specific design and existing implementation error, effect estimation, performance measures calculation. 
-Hence, the input of the function is the specification parameter:
+Within each simulation-experiment, the steps data sampling and effect estimation will be repeated (further explanation see @sec-statsdetails.) To simplify the process of the whole simulation-experiment, we packaged the code into the R package {fidelitysim}. 
 
+The function `fidelitysim::simulation()` includes the steps: data sampling for a specific design and existing implementation error, effect estimation, performance measures calculation and the following parameters are needed as arguments to the function:  
+ 
   - number of repeats for the simulation
   - chosen design (including study design, number of cluster, time points and individuals per cluster)
   - model parameters (effect, variances, ...)
   - two design matrices which indicates whether deviation from perfect situations are assumed or not
   
-  and the output are:
+The outputs of the function are: 
   
   - effect estimates
-  - performance measures
+  - performance measures  
   
 After repeating the steps of the simulation the obtained effect estimates can be 
-evaluated for the performance of the model. The provided function `performanceMeas()` 
-of the R-package {fidelitysim} calculates and provides the following performance measures of a simulation:  
+evaluated for the performance of the model. The provided function `fidelitysim::performanceMeas()` calculates and provides the following performance measures of a simulation: 
 
 - Bias: mean deviation of the estimates from the true value of the parameter of 
   interest (intervention effect) is an indicator of accuracy  
@@ -46,19 +45,20 @@ of the R-package {fidelitysim} calculates and provides the following performance
 - Power: proportion of simulation samples in which the H0 of no effect is rejected 
   at a significance level of $\alpha$ when H0 is false (is related to the empirical Type II error rate).  
 
-In the following, we will show an example of a whole simulation experiment for a parallel cluster randomized trial. Further we will point out necessary adaptions for stepped-wedge designs (regarding the parameter setting).
+In the following, we will show an example of a whole simulation experiment for a parallel cluster randomized trial. Further we will point out necessary adaptions for stepped-wedge designs (regarding the parameter setting). 
 
-First, make sure that necessary packages are loaded:
-
+First, make sure that necessary packages are loaded (and to obtain the same results) indicate a seed for the simulation:
 
 ```{r pkgs}
 # load necessary packages
 library(fidelitysim)
 library(samplingDataCRT)
+
+# seed
+set.seed(1234)
 ```
 
-
-One setting includes the specification of :
+One setting includes the specification of:  
 
 1. Study design
 2. Assumptions about fidelity pattern
@@ -67,20 +67,19 @@ One setting includes the specification of :
 
 and finally, 
 
-5. the Simulation experiment can be performed.
+5. the simulation experiment can be performed.
 
 
 ### Study design {#sec-studydesign}
 
 Based on the study setup, the following parameters for the study design need to be defined: 
-
 - No. of clusters (e.g hospitals)
 - No. of individuals per cluster (and time point) as the cluster size
 - No. of time points the cluster were followed
-- Design type controls if individuals will be followed over time (cross-sectional or longitudinal): cross-sectional type, which indicates trials where individuals within the cluster can change over time points
+- Design type controls if individuals will be followed over time (cross-sectional or longitudinal): cross-sectional type, which indicates trials where individuals within the cluster can change over time points  
 
-A design matrix according the study design has to be determined by the  function `designMatrix()`. Here, two arguments are specific for the different types of studies. If the `design` argument is set 'parallel', then the parameter `nSW` indicates here the number of clusters are being control group. 
-If choosing `design = "SWD"` (which is also set by default), the he parameter `nSW` indicates the number of cluster switches per time point from control to intervention group.
+A design matrix according the study design has to be determined by the function `designMatrix()`. Here, two arguments are specific for the different types of studies. If the `design = 'parallel'`, then the parameter `nSW` indicates the number of clusters as being the control group. 
+If choosing `design = 'SWD'` (which is also set by default), the he parameter `nSW` indicates the number of cluster-switches per time point from control to intervention group.
 
 For our example we will use the following parameter: 
 
@@ -96,15 +95,17 @@ In the next step we determine the corresponding design matrix for a parallel clu
 ```{r design-prll}
 ## Design matrix ##
 
-I <- 6 # number of clusters
-J <- 10 # number of individuals per cluster (used later in simulation-step)
-K <- 7 # number of time points
-Sw <- 1 # number of cluster switches per time point can be manually set
-type<-"cross-sec"
+I <- 6      # number of clusters
+J <- 10     # number of individuals per cluster (used later in simulation-step)
+K <- 7      # number of time points
+Sw <- 1     # number of cluster switches per time point can be manually set
+type <- "cross-sec"
 
 # design matrix for parallel design
-(designMat_prll <- designMatrix(nC = I, nT = K, nSw = round(I / 2), 
-                                design = "parallel"))
+(designMat_prll <- designMatrix(
+  nC = I, nT = K, nSw = round(I / 2),
+  design = "parallel"
+))
 
 ```
 
@@ -113,7 +114,7 @@ type<-"cross-sec"
 
 The following step is a central part of this tutorial. We want to examine different fidelity patterns and their implications for the study effects. 
 
-To simulate a specific fidelity pattern, a second design matrix indicating the pattern of fidelity has to be provided and indicates if there are deviations from the perfect situation (100% fidelity) present or not. For the simulation we have to add fractional values according to the chosen fidelity pattern. There are 3 functions in within the R-package {fidelitysim} that can be used to specify several fidelity patterns. The patterns can be specified based on a slow, linear or fast increase and the respective start and end value for fidelity. For further explanation of fidelity patterns see @sec-fidpatterns.
+To simulate a specific fidelity pattern, a second design matrix indicating the pattern of fidelity has to be provided and indicates if there are deviations from the perfect situation (100% fidelity) present or not. For the simulation we have to add fractional values according to the chosen fidelity pattern. There are 3 functions within the R-package {fidelitysim} that can be used to specify several fidelity patterns. The patterns can be specified based on a slow, linear or fast increase and the respective start and end value for fidelity. For further explanation of fidelity patterns see @sec-fidpatterns.
 The selected fidelity patterns can then be pushed to the design matrix with the R-package
 {samplingDataCRT}, for more explanation see @sec-determinediffdesignmatrix.
 
@@ -132,7 +133,7 @@ For our example we use the same design parameters, i.e. parallel cluster randomi
 <!-- Using the same parallel design trial example and assume a linear increase of fidelity from 40% to 80% from time point 1 to the end of trial (time point `K`)  -->
 
 
-3 arguments has to be specified to determine the fidelity pattern using the provided function `find.Fidelity.linear`: 
+3 arguments have to be specified to determine the fidelity pattern using the provided function `find.Fidelity.linear`: 
 
 ```{r params-fidel-prll}
 ### Fidelity parameters ###
@@ -147,15 +148,14 @@ m <- (Fid.T1 - Fid.End) / (1 - (K - 1))
 ```
 
 
-
 ```{r fidel-lin-prll}
 # model linear increase
 res.lin <- find.Fidelity.linear(time.points = K, Fid.End, Fid.T1)
 ```
 
-(Find the application of the other two functions for slow and fast increase @sec-fidpatterns.)
-Create the new design matrix using the function `implemMatrix.parallel` :    
+(The application of the other two functions for slow (exponential) and fast (logarithmic) increase are shown in @sec-fidpatterns.)  
 
+Then, we create the new design matrix using the function `implemMatrix.parallel` :    
 
 ```{r fidel-matr-prll}
 # design matrix of a linear fidelity pattern
@@ -165,7 +165,7 @@ Create the new design matrix using the function `implemMatrix.parallel` :
 ))
 ```
 
-This matrix reflect the fidelity pattern, shows the implementation error. Both design matrices are latter used for the simulation as arguments `X = designMat_prll` and `X.A = fidelMat_prll` for the R-function `simulation()` in @sec-simulexp (note, both do not differ in the *perfect* situations). 
+This matrix reflect the fidelity pattern including the implementation error (deviation form 100%). Both design matrices are later used for the simulation as arguments `X = designMat_prll` and `X.A = fidelMat_prll` for simulation  @sec-simulexp. In a *perfect* situation - where we assume 100% fidelity at every time point, both matrices are the same. 
 
 ### Specifying model parameter {#sec-modelparam}
 
@@ -173,10 +173,10 @@ In addition to the design parameters, we have to define the following model para
 
 - Baseline mean of the outcome of interest (e.g. mean quality of life score) $\mu_0$
 - Intervention effect (the change of scores after intervention) $\Theta$
-- Between cluster and error variance $\sigma_c$, $\sigma_e$ which specify the inter-cluster correlation coefficient ICC
--	If applicable: Time trend (effect of each time point during followed time points)
+- Inter-cluster correlation coefficient ICC (between cluster and error variance $\sigma_c$, $\sigma_e$ )  
+-	If applicable: time trend (effect of each time point during followed time points)  
 
-The values has to be choose from expert knowledge on the scientific question, which want to be answered, in relation to the outcome of interest. In general, consideration on sample size calculation is done before conducting a study and determine the parameter.
+These values are usually chosen based on expert knowledge.  
 
 For our example we use the following model parameter: 
 
@@ -185,23 +185,6 @@ For our example we use the following model parameter:
 - no time trend
 - ICC of 0.001
 
-<!-- ########### -->
-
-<!-- Data for a cluster randomized trial is sampled from a model provided by the package {samplingDataCRT}. Therefore, and in addition to the design parameters, we have to define the following model parameters as well: -->
-
-<!-- - baseline mean of the outcome of interest (e.g. mean quality of life score) of 10 -->
-<!-- - intervention effect (the change of scores after intervention) of 1 -->
-<!-- - kind of time trend (effect of each time point during followed time points) -->
-<!-- - a between clusters and error variance regarding the outcome of interest that results in an inter-cluster correlation coefficient (ICC) -->
-
-<!-- Define an hypothetical trial with: -->
-
-<!-- - baseline mean of the outcome of interest of 10 -->
-<!-- - intervention effect of 1 -->
-<!-- - no time trend -->
-<!-- - a between clusters and error variance that results in an ICC of 0.001 -->
-
-<!-- as follows: -->
 
 ```{r params-prll}
 ## Model parameter ##
@@ -222,26 +205,13 @@ sigma.3 <- sigma.1 * sqrt(0.001 / (1 - 0.001))
 ```
 
 
-When choosing a longitudinal design instead of a cross-sectional design a third variance need to be specified (see for more detail into @sec-sampdatacrt).
-
-<!-- Choosing a `longitudinal`  instead of a `cross-sectional` design for the study demand the specification of a third variance (see for more detail into [Sampling data of a cluster randomized trial with a given design]). -->
-
-<!-- :::{.rmdwarning} -->
-<!-- DIANA - can we say to recommend these parameters as default values? -->
-<!-- what does mu.0 mean? How do I (non-statistician) know which values to choose? -->
-<!-- From a practical point of view I would expect to have a comment on this. -->
-
-<!-- ::: -->
-
+When choosing a longitudinal instead of a cross-sectional design a third variance 
+needs to be specified (see for more detail into @sec-sampdatacrt).
 
 ### Defining number of iterations for the simulation
 
 In addition to the parameters set above, we need to define the number of iterations for the
-simulation. The number determines how often the sampling and estimation should be repeated to finally calculate the performance measures. In the literature 10,000 and 100,000 iterations are recommended to obtain valid results, however, this validity comes at a time cost. In our example we will set n = 1,000 iterations with regard to the computing time (and can be set by the user under consideration of the own computational power). 
-
-
-<!-- In addition to the parameters set above, we need to define the number of iterations  -->
-<!-- for the simulation. Its a number how often the sampling and estimation should be repeated to finally calculate the performance measures. The literature recommends between 10,000 and 100,000 repeats for valid results, but this comes at a time cost. To simplify this, we use n = 1,000 here. -->
+simulation. The number determines how often the sampling and estimation should be repeated to finally calculate the performance measures. In the literature 10,000 and 100,000 iterations are recommended to obtain valid results, however, this validity comes at a time cost. In our example we will set n = 1,000 iterations with regard to the computing time (and can be set by the user under consideration of their machine's computational power). 
 
 
 ```{r anzItglobal}
@@ -261,7 +231,7 @@ Since we set all necessary arguments for the usage of the provided simulation fu
 3. Indication if there are deviations from perfect situations or not
 4. Iterations of the simulation
 
-we can start the simulation by using the provided function `simulation` in package {fidelitysim} as follows:
+we can start the simulation by using the provided function `simulation`:
 
 ```{r, echo=FALSE}
 start_time <- Sys.time()
@@ -287,10 +257,9 @@ time.sim <- round(as.numeric((end_time - start_time), units = "mins"),2)
 ```
 
 
-(To notice, repeating the simulation `r anzSim` times for this design a computational time of
-`r time.sim` min is needed.)
+(To notice, repeating the simulation `r anzSim` times for this design a computational time of `r time.sim` min is needed.)
 
-The output of the simulation provides a total of n =`r length(res.Simu.parallel.lin)` results, among the following performance parameters (see also Introduction of this Chapter): 
+The output of the simulation provides a total of n =`r length(res.Simu.parallel.lin)` results, among the following performance parameters (see also @sec-simintro): 
 
   - Bias
   - Coverage
@@ -299,10 +268,10 @@ The output of the simulation provides a total of n =`r length(res.Simu.parallel.
 The mean estimate of the intervention effect from all iterations and the 
 power of the design can be accessed like this:  
 
-
 ```{r results-fidel-prll}
 # mean estimated intervention effect
 round(res.Simu.parallel.lin["intervention Mean ."],3)
+
 # estimated power
 round(res.Simu.parallel.lin["Power.Intervention"],3)
 ```
@@ -315,8 +284,7 @@ We obtain a power of `r pow.par.lin` to detect an intervention effect of `r thet
 
 ## Comparison of several Fidelity patterns
 
-To compare the effect of different fidelity patterns, a repetition of the simulation has to be
-conducted.
+To compare the effect of different fidelity patterns, a repetition of the simulation has to be conducted.
 
 We will continue with our example from before (see @sec-studydesign - @sec-modelparam) and examine in total seven different fidelity patterns. 
 We will assume (A) three types of slow increases, (B) one linear increase and (C) three types of fast increases of fidelity for this design setting (see @sec-fidpatterns for further explanation) and compare with the perfect situation. 
@@ -350,7 +318,7 @@ start_time <- Sys.time()
 
 ```
 
-At first, perfect situation simulation (no deviation fro 100% implementation).
+At first, perfect situation simulation (no deviation from 100% implementation).
 
 ```{r, warning=F, message=F, eval=FALSE}
 ################################
@@ -446,7 +414,6 @@ res<-fidelitysim::simulation(anzSim=anzSim,
 res<-as.data.frame(t(res))
 
 ```
-
 
 For (C) several fast increase (reflected by a logarithmic function):
 
@@ -572,8 +539,11 @@ ggplot(res.plot,
 #ggsave(filename= paste0("img/", lubridate::today(), "-results.Simulation.10000.png"))
 ```
 
-The figure @fig-sim summarize the results of the several simulations for different fidelity patterns regarding power of the study. The results shown are performed by 10,000 iterations for the simulation to have precise estimates. For this design setting and number of iteration (n=10,000), a computational time of 7 hours is needed.
+@fig-sim summarizes the results of the simulation for different fidelity patterns regarding power of the study. The results shown are performed by 10,000 iterations for the simulation to have precise estimates. For this design setting and number of iteration (n=10,000), a computational time of 7 hours is needed.
 
-![Results of Simulation for several fidelity pattern scenarios](img/results.Simulation.10000.png){#fig-sim}
-
+```{r, out.width='80%', echo = F}
+#| fig-cap: "Results of simulation for several fidelity pattern scenarios"
+#| label: fig-sim 
+knitr::include_graphics("img/results.Simulation.10000.png")
+```
 
