--- a/intro.qmd
+++ b/intro.qmd
@@ -56,5 +56,5 @@ library(fidelitysim)
 
 ## Other considerations
 
-The local simulation can - depending on the number of clusters - take up to 
-10-12 hours when the recommended number of iterations of 10,000 is used. 
+The local simulation can - depending on the number of clusters and the computational power - take up to 
+10-12 hours when the commenly recommended number of iterations of 10,000 is used. We suggest the user to start own simulations with a small number and than increase, when it is clear the code is running.
